# CFRP-finetune-MedSAM

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: conv_lora.yaml  full_ft.yaml  lora.yaml  sam2.1_hiera_b+_512.yaml  zero_shot.yaml
notebooks/: 01_data_download_and_eda.ipynb  02_preprocess_to_npz.ipynb  03_zeroshot_baseline.ipynb  04_train_lora.ipynb  05_train_conv_lora.ipynb  06_train_full_ft.ipynb  07_eval_and_ablation.ipynb
scripts/: generate_figures.py  generate_figures_real.py  preprocess_real_cfrp.py  run_ablation.py  run_ablation_real.py  run_cross_eval.py  run_training.py  run_training_real.py  run_zeroshot.py  run_zeroshot_real.py  setup_medsam2.sh
src/cfrp_medsam2/: __init__.py  data.py  download.py  eval.py  lora.py  model.py  preprocess.py  smoke_test.py  synthetic.py  train.py  viz.py
tests/: test_data.py  test_eval.py  test_infer_volume.py  test_lora.py  test_medsam2_injection.py
